--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -716,6 +716,8 @@
         </article>
     </section><!-- End Contact Section -->
 
+<footer>
+    <a href=""></a>
 
     <div class="credits">
         <!-- All the links in the footer should remain intact. -->
@@ -724,5 +726,7 @@
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
     </div>
+</footer>
+
 
 {% endblock %}
