arrangement du code coter front

--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -2,6 +2,11 @@
 {% block title %}{% endblock %}
 
 {% block body %}
-    <h1>Inscription</h1>
-    {{ form(form) }}
+
+    <h1 class="text-center">Inscription</h1>
+
+    <div class="container mx-auto my-auto">{{ form(form) }}</div>
+
+
+
 {% endblock %}
