--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -795,7 +795,7 @@
     <!-- ======= Footer  ======= -->
         <footer class="credits text-center">
             {% if app.user %}
-                <a href="{# { path('app_account') }#}">Mon compte <small>({{ app.user.firstname }})</small></a> | <a
+                <a href="{{ path('app_account') }}">Mon compte <small>({{ app.user.firstname }})</small></a> | <a
                     href="{{ path('app_logout') }}">Déconnexion</a>
             {% else %}
                 <a href="{{ path('app_login') }}">Connexion</a> | <a href="{{ path('app_register') }}">Inscription</a>
