--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -3,9 +3,13 @@
 {% block title %}Mon compte - Gaelle Kerforne{% endblock %}
 
 {% block body %}
+    {% if app.user %}
+        <a href="{{ path('app_account') }}">Mon compte <small>({{ app.user.firstname }})</small></a> | <a
+            href="{{ path('app_logout') }}">Déconnexion</a>
+    {% endif %}
 <main class="container my-auto">
     <h2>Hello {{ app.user.firstname }} {{ app.user.lastname }}</h2>
-
+    <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a>
 </main>
 
 
