--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -3,12 +3,18 @@
 {% block title %}Mon compte - Gaelle Kerforne{% endblock %}
 
 {% block body %}
+
     {% if app.user %}
         <a href="{{ path('app_account') }}">Mon compte <small>({{ app.user.firstname }})</small></a> | <a
             href="{{ path('app_logout') }}">Déconnexion</a>
     {% endif %}
+
 <main class="container my-auto">
     <h2>Hello {{ app.user.firstname }} {{ app.user.lastname }}</h2>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('admin') }}">Vous etes administrateur acceder au backoffice</a>
+    {% endif %}
+
     <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a>
 </main>
 
