gestions du front et avancement du back office
Took 5 hours 44 minutes

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,15 +5,22 @@
 {% block body %}
 
     {% if app.user %}
-        <a href="{{ path('app_account') }}">Mon compte <small>({{ app.user.firstname }})</small></a> | <a
-            href="{{ path('app_logout') }}">Déconnexion</a>
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{ path('app_account') }}">Mon compte <small>({{ app.user.firstname }})</small></a> |
+            <a href="{{ path('admin') }}">Espace Admin</a> |
+            <a href="{{ path('app_logout') }}">Déconnexion</a>
+
+        {% else %}
+
+            <a href="{{ path('app_account') }}">Mon compte <small>({{ app.user.firstname }})</small></a> |
+            <a href="{{ path('app_logout') }}">Déconnexion</a>
+
+        {% endif %}
+
     {% endif %}
 
 <main class="container my-auto">
     <h2>Hello {{ app.user.firstname }} {{ app.user.lastname }}</h2>
-    {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('admin') }}">Vous etes administrateur acceder au backoffice</a>
-    {% endif %}
 
     <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a>
 </main>
