--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -18,6 +18,7 @@ body {
 body::before {
   content: "";
   position: fixed;
+  /*background-color: #040404;*/
   background: #040404 url("../img/bg.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
@@ -446,6 +447,9 @@ section .container {
 /*--------------------------------------------------------------
 # Interests
 --------------------------------------------------------------*/
+.interests.container{
+  margin-top: 30px;
+}
 .interests .icon-box {
   display: flex;
   align-items: center;
@@ -473,6 +477,9 @@ section .container {
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
+.testimonials.container{
+  margin-top: 40px;
+}
 .testimonials .testimonials-carousel, .testimonials .testimonials-slider {
   overflow: hidden;
 }
